[project]
name = "blog-writing-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=1.62.0",
    "langchain>=1.2.8",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.8",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.1.7",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.0.7",
    "langgraph-checkpoint-postgres>=3.0.4",
    "pillow>=12.1.0",
    "postgres>=4.0",
    "psycopg[binary]>=3.3.2",
    "pydantic>=2.12.5",
    "pypdf>=6.7.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.54.0",
]
